# meds-evaluation

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  publish-to-pypi.yaml  tests.yaml
sample_output/: results.json
sample_predictions/: 0.parquet
src/meds-evaluation/: binary_classification.py  evaluate.py
src/meds_evaluation/: __init__.py  __main__.py  evaluate.py  schema.py  utils.py
src/meds_evaluation/configs/: meds_evaluation.yaml
tests/: __init__.py  test_binary_classification.py  test_schema.py
tests/sample_output/: results.json  results_boot.json
tests/sample_predictions/binary_classification/: small.parquet
