[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meds-evaluation"
dynamic = ["version"]
authors = [
    { name = "Kamilė Stankevičiūtė", email = "kamile.stankeviciute@cst.cam.ac.uk" },
    { name = "Vincent Jeanselme", email = "vincent.jeanselme@mrc-bsu.cam.ac.uk" },
    { name = "Matthew McDermott", email = "mattmcdermott8@gmail.com" },
]
description = "A module for evaluating the predictions of the models trained on MEDS datasets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars~=1.1.0",
    "pyarrow",
    "numpy",
    "scikit-learn",
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pre-commit"]
#tests = ["pytest", "pytest-cov", "rootutils"]
#local_parallelism = ["hydra-joblib-launcher"]
#slurm_parallelism = ["hydra-submitit-launcher"]

[project.scripts]

[project.urls]
Homepage = "https://github.com/kamilest/meds-evaluation"
Issues = "https://github.com/kamilest/meds-evaluation/issues"
